--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no" />
     <title>Vicolraj</title>
-    <base href="/home" />
+   
 
 
 
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link href="Vicolraj.styles.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
-    <link rel="favicon" type="image/x-icon" href="icon-192.png" />
+    <link rel="icon" type="image/x-icon" href="icon-192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 
