--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="boxicons/css/boxicons.min.css" />
     <link rel="stylesheet" href="aos/aos.css" />
 
-    <base href≠"/FutaQuiz/" />
+    <base href≠"/" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="Vicolraj.styles.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
